@@ -1,3 +1,7 @@
+20110606 (T.S.)
+ - fidProcess.c, wavBuf.c, devWfRawSig.c: include <errlog.h> to silence
+   compiler warnings under base-3.14.12
+
 20110509 (T.S.)
  - RELEASE_NOTES: updated; cut R2-1-0
 20110502 (T.S.)
